tests/ui/01-multiple-guards.stderr
error[E0499]: cannot borrow `map` as mutable more than once at a time
 --> tests/ui/01-multiple-guards.rs:6:19
  |
5 |     let _guard1 = map.recycle::<&str, &str>();
  |                   --- first mutable borrow occurs here
6 |     let _guard2 = map.recycle::<&str, &str>();
  |                   ^^^ second mutable borrow occurs here
7 | }
  | - first borrow might be used here, when `_guard1` is dropped and runs the `Drop` code for type `ReusableHashMapGuard`
